Sat 10 Dec 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Add a coverage CI job and reporting

	* Add a GitLab pages for HTML coverage report
	* Update .gitlab-ci.yml to generate artifacts (incl. cobertura XML)
	* Add status badges in README.md
	* Make documentation tests available to be run separatedly
	* Update test targets in Makefile

Wed 23 Nov 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Remove unused `level` argument (parser)
	Fix needless_borrow issues (eg. &["..."])
	Fix deprecated field name in .clippy.toml (disallowed-names)

Sun 20 Nov 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Release lithe v0.0.3, lithe-cli v0.0.3
	Update lithe-cli dependencies
	Update parser

	* Create tree structure builder functions
	* Fix grammar for inner paris (nested block elements)
	* Remove parent field from Element
	* Change the type of Element name as String

Sat 19 Nov 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Add simple renderer

Fri 21 Oct 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Release lithe v0.0.2, lithe-cli v0.0.2

Sat 26 Mar 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Add html, head and body tags support

Mon 21 Mar 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Refactor DocumentType and DTD

	* Add unit tests
	* Derive Debug trait for structs in document.rs

Sun 20 Mar 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	Add Document

	* build() creates Document object
	* parse() returns Ok(Document)

Sun 06 Mar 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add DOCTYPE support

Sat 14 Aug 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit ;)